Release 0.4.5
- Renamed sub & export: PDF::Field :&coerce -> :&coerce-field

Release 0.4.4
- Add PDF::Class::Defs. Fix annot detection in PDF::Field
- Rename methods PDF::Field.flags -> PDF::Field.field-flags and
  PDF::Annots.flags -> PDF::Annots.annot-flags. Keep these distinct
  as the PDF::Field role is commonly mixed into PDF::Annot.
- Add enumerations PDF::Annot :AnnotFlag and PDF::Field :FieldFlag,
  :BtnFieldFllag, :TextFieldFlag, ChoiceFieldFlag
- Add role PDF::AdditionalActions
- Renamed github project and repository p6-pdf/PDF-Class-p6 -> pdf-raku/PDF-Class-raku

Release 0.4.3
- [PDF::Field]
  -- fix .fields() and .fields-hash() methods to return only terminal fields
  -- .value() method now returns .V // .DV (value or default-value)
- Provide top level fields() and field-hash(); (similar to FDF)
- Enable update of name-trees (via .name-tree()) and number-trees
  (via .number-tree()). Added calls to .cb-finish() which now must
  be called to publish the updates.
- Also support name/number-tree vivication
- Add PDF::Class.creator() method - editable list of creators. Also
  seperate creators with '; ' when writing to PDF::Info.Creator; seems
  to be the convention.

Release 0.4.2
- Improved checking of name and number trees (pdf-checker.raku)
- Fixes to .calculator() method in PDF::Function::Stitching
  and PDF::Function::Postscript

Release 0.4.1
- Add role PDF::Class::StructItem
- Fix t/pdf-xobject-form.t to pass against PDF::Content v0.4.1

Release 0.4.0
- Rename modules *.pm -> *.rakumod and scripts *.p6 -> *.raku
- Add annotation classes: Highlight, Underline, Squiggly, StrikeOut

Release 0.3.9
- Rename PDF::StructElem.structure-type() alias to .tag()
- Minor refactor of destination coercements. Add PDF::Names; extracted from PDF::Catalog.
- Added classes PDF::Sound PDF::Action::Sound

Release 0.3.8
- Add Catalog Permissions and PDF::Signature::Reference roles
- More forgiving PDF::ExtGState and PDF::Annot.Border[3] (dash entry)