@@ -25,10 +25,10 @@
     "PDF::Action::Sound": "lib/PDF/Action/Sound.rakumod",
     "PDF::Action::Thread": "lib/PDF/Action/Thread.rakumod",
     "PDF::Action::URI": "lib/PDF/Action/URI.rakumod",
-    "PDF::AdditionalActions": "lib/PDF/AdditionalActions.rakumod",
     "PDF::Annot": "lib/PDF/Annot.rakumod",
     "PDF::Annot::_Markup": "lib/PDF/Annot/_Markup.rakumod",
     "PDF::Annot::_TextMarkup": "lib/PDF/Annot/_TextMarkup.rakumod",
+    "PDF::Annot::AdditionalActions": "lib/PDF/Annot/AdditionalActions.rakumod",
     "PDF::Annot::Caret": "lib/PDF/Annot/Caret.rakumod",
     "PDF::Annot::Circle": "lib/PDF/Annot/Circle.rakumod",
     "PDF::Annot::FileAttachment": "lib/PDF/Annot/FileAttachment.rakumod",
@@ -48,6 +48,7 @@
     "PDF::CIDSystemInfo": "lib/PDF/CIDSystemInfo.rakumod",
     "PDF::CMap": "lib/PDF/CMap.rakumod",
     "PDF::Catalog": "lib/PDF/Catalog.rakumod",
+    "PDF::Catalog::AdditionalActions": "lib/PDF/Catalog/AdditionalActions.rakumod",
     "PDF::Class": "lib/PDF/Class.rakumod",
     "PDF::Class::Defs": "lib/PDF/Class/Defs.rakumod",
     "PDF::Class::Loader": "lib/PDF/Class/Loader.rakumod",
@@ -70,6 +71,7 @@
     "PDF::ExData::Markup3D": "lib/PDF/ExData/Markup3D.rakumod",
     "PDF::ExtGState": "lib/PDF/ExtGState.rakumod",
     "PDF::Field": "lib/PDF/Field.rakumod",
+    "PDF::Field::AdditionalActions": "lib/PDF/Field/AdditionalActions.rakumod",
     "PDF::Field::Button": "lib/PDF/Field/Button.rakumod",
     "PDF::Field::Choice": "lib/PDF/Field/Choice.rakumod",
     "PDF::Field::Signature": "lib/PDF/Field/Signature.rakumod",
@@ -113,6 +115,7 @@
     "PDF::Outlines": "lib/PDF/Outlines.rakumod",
     "PDF::OutputIntent": "lib/PDF/OutputIntent.rakumod",
     "PDF::Page": "lib/PDF/Page.rakumod",
+    "PDF::Page::AdditionalActions": "lib/PDF/Page/AdditionalActions.rakumod",
     "PDF::Pages": "lib/PDF/Pages.rakumod",
     "PDF::Pattern": "lib/PDF/Pattern.rakumod",
     "PDF::Pattern::Shading": "lib/PDF/Pattern/Shading.rakumod",
