@@ -8,6 +8,7 @@ class PDF::Annot::Widget
     use PDF::COS::Tie;
     use PDF::COS::Name;
     use PDF::Action;
+    use PDF::Annot::AdditionalActions;
     use PDF::Border;
     use PDF::Field;
 
@@ -24,7 +25,7 @@ class PDF::Annot::Widget
     has Hash $.MK is entry;            # (Optional) An appearance characteristics dictionary to be used in constructing a dynamic appearance stream specifying the annotation’s visual presentation on the page.
                                        # The name MK for this entry is of historical significance only and has no direct meaning.
     has PDF::Action $.A is entry(:alias<action>);             # (Optional; PDF 1.1) An action to be performed when the link annotation is activated.
-    has Hash $.AA is entry(:alias<additional-actions>);            # (Optional; PDF 1.2) An additional-actions dictionary defining the annotation’s behavior in response to various trigger events (see Section 8.5.2, “Trigger Events”).
+    has PDF::Annot::AdditionalActions $.AA is entry(:alias<additional-actions>);            # (Optional; PDF 1.2) An additional-actions dictionary defining the annotation’s behavior in response to various trigger events (see Section 8.5.2, “Trigger Events”).
     has PDF::Border $.BS is entry(:alias<border-style>);            # (Optional; PDF 1.2) A border style dictionary specifying the width and dash pattern to be used in drawing the annotation’s border.
                                        # Note: The annotation dictionary’s AP entry, if present, takes precedence over the Land BS entries
     has PDF::Field $.Parent is entry(:indirect);	# (Required if this widget annotation is one of multiple children in a field; absent otherwise) An indirect reference to the widget annotation’s parent field. A widget annotation may have at most one parent; that is, it can be included in the Kids array of at most one field
